--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -40,3 +40,55 @@
 .db-data {
   color: green;
 }
+
+.mt-1{
+  margin-top: 5px !important;
+}
+
+
+.mt-2{
+  margin-top: 10px !important;
+}
+
+.mt-3{
+  margin-top: 15px !important;
+}
+
+.mt-4{
+  margin-top: 20px !important;
+}
+
+table {
+  table-layout: fixed;
+  width: 100%;
+  border-collapse: collapse;
+  border: 3px solid black;
+}
+
+thead th:nth-child(1) {
+  width: 5%;
+}
+
+thead th:nth-child(2) {
+  width: 40%;
+}
+
+thead th:nth-child(3) {
+  width: 40%;
+}
+
+thead th:nth-child(4) {
+  width: 15%;
+}
+
+th,
+td {
+  padding: 5px;
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
